# CSIS

./: .gitignore  CONTRIBUTING.md  CSIS-architecture.html  CSIS-deck.pptx  CSIS-memo.docx  CSIS-openai-architecture.html  CSIS-whitepaper.docx  CYCLES.md  Email-to-Anthropic.md  LICENSE  README.md  ROADMAP.md  RUN.md  pyproject.toml  requirements.txt
.claude/routines/: README.md  daily-improvement.md
brain/: BRAIN.html  README.md
brain/critiques/: 01-pre-impl-redteam.md  02-post-impl-redteam.md  03-cycle3-redteam.md  04-cycle4-redteam.md  05-cycle5-redteam.md  06-cycle6-redteam.md  07-cycle7-redteam.md  08-cycle8-redteam-G1G3.md  08-cycle8-redteam-G2.md  08-cycle8-redteam-G4G5G6.md  (+1 more)
csis/: __init__.py  __main__.py  budget.py  config.py  contracts.py  curiosity.py  daemon.py  loop.py
docs/: architecture.html  cycles.html  dashboard-demo.html  index.html  playground.html
scripts/: burst.py  demo_pr_scenario.py  install_service.ps1  run_daemon.ps1  uninstall_service.ps1
tests/: _helpers.py  conftest.py  test_auditor.py  test_backends.py  test_budget.py  test_concurrency.py  test_cycle2_fixes.py  test_cycle3_quickwins.py  test_cycle4_fixes.py  test_cycle4_phaseB.py  test_cycle5_fixes.py  test_cycle5_phaseB.py  test_cycle6_fixes.py  test_cycle6_phaseB.py  test_cycle7_fixes.py  test_cycle8_fixes.py  test_cycle9_fixes.py  test_daemon.py  test_distributional_graders.py  test_domains.py  test_dreams.py  test_integration.py  test_memory.py  test_safety.py  test_safety_fuzzer.py  test_substrate.py  test_value_reminder.py  test_verification.py  test_whydoc_diff.py
(+84 files in other folders)
