[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "csis"
version = "0.0.1"
description = "CSIS Phase-0 prototype: coordinator-led continuous self-improving system"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5,<3",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40,<1"]
dev = ["pytest>=7.4,<9"]

[tool.setuptools.packages.find]
include = ["csis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
